log
Sun, Mar 23, 2025  8:03:45 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 23, 2025 10:15:31 PM: 
 tests:  0|5
total_score: 0/70
d643a82
Sun, Mar 23, 2025 10:28:46 PM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|4
total_score: 10/70
0390b21
Sun, Mar 23, 2025 10:51:45 PM: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
ffcf1d0
Sun, Mar 23, 2025 11:36:06 PM: 
 exercises.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:89:21: error: comparison between pointer and integer [-Werror]
       if (numActual == elem) popCurrent(L);
                     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
955bb34
Sun, Mar 23, 2025 11:40:55 PM: 
 exercises.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
6b2deea
Sun, Mar 23, 2025 11:42:08 PM: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
c504992
Sun, Mar 23, 2025 11:43:28 PM: 
 exercises.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  4|1
total_score: 50/70
d8b14b4
